BusOne01/src/objects/BOT_Coverage_Policy__c.object
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is used to store the coverage policy details and having a lookup relationship with Account.</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the account object. related account Id will be populated here</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>coverage policy</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Age_requirements__c</fullName>
        <label>Age Requirements</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Authorization_LimitsforInitial_Stage__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Authorization Limits for Initial Stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_CPT_Codes__c</fullName>
        <label>CPT Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <description>For channel selection neither commercial or medicate</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                    <default>true</default>
                    <label>ALL</label>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Conditions__c</fullName>
        <description>It is a subsection of diagnostic requirements for initial therapy</description>
        <label>Conditions</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Conditions_for_Initial_Stage__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Conditions for Initial Stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Coverage_Policy_Form__c</fullName>
        <description>To store the external download link of the associated Coverage Policy Form</description>
        <formula>HYPERLINK(&quot;/apex/Coverage_Policy&quot;, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Policy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_DRC__c</fullName>
        <label>DRC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOT_DRI__c</fullName>
        <label>DRI</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOT_Diagnostic_Procedure__c</fullName>
        <description>It is a subsection of diagnostic requirements for initial therapy</description>
        <label>Diagnostic Procedure</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Diagnostic_Response__c</fullName>
        <description>It is a subsection of diagnostic requirements for initial therapy</description>
        <label>Diagnostic Response</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Documentation_Required_Initial_Stage__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Documentation Required - Initial Stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Drug__c</fullName>
        <description>To store name of the drug</description>
        <label>Drug</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Duration_for_Initial_Stage__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Duration for Initial Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity ID. It is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Product_ID__c</fullName>
        <description>To store the BOT Drug ID. This field is used in Coverage Policy Before insert trigger to pull the SFDC Drug ID from the Formulary Product object.</description>
        <label>Formulary Product ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the Formulary Product.</description>
        <label>Drug</label>
        <referenceTo>Formulary_Products_vod__c</referenceTo>
        <relationshipLabel>Coverage Policy</relationshipLabel>
        <relationshipName>Formulary_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_HCPCS_Codes__c</fullName>
        <label>HCPCS Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_ICD_9_Codes__c</fullName>
        <label>ICD-9 Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Indication__c</fullName>
        <label>Indication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Initial_Therapy_details__c</fullName>
        <description>It is a subsection of diagnostic requirements for initial therapy</description>
        <label>Initial Therapy details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOT_Market__c</fullName>
        <label>Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Monitor_for_Noneofthe_following__c</fullName>
        <description>It is a subsection of diagnostic requirements for initial therapy</description>
        <label>Monitor for / None of the following</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOT_Origination_Date__c</fullName>
        <label>Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BOT_PADetail__c</fullName>
        <label>PA Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOT_PA_Form__c</fullName>
        <description>To store the external download link of the associated PA Form</description>
        <formula>HYPERLINK(&quot;/apex/PA_FORM&quot;, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PA Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_PA_Required_Y_N__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>PA Required (Y/N)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_ID__c</fullName>
        <description>It is a hidden field and it is used for internal reference purpose only</description>
        <label>Plan ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_State__c</fullName>
        <description>It is used to store associated state of given plan</description>
        <label>Plan State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Type__c</fullName>
        <description>It is a hidden field and used to store plan type.</description>
        <label>Plan Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Policy_Detail__c</fullName>
        <label>Policy Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOT_Policy_type__c</fullName>
        <description>To store the policy type</description>
        <label>Policy type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Prior_Authorization_Details__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Prior Authorization Details</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Requirement_s__c</fullName>
        <description>It is a sub section field of Diagnostic Requirements for Initial Therapy</description>
        <label>Requirement(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Requirements_for_Initial_Stage__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Requirements for Initial Stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_SP_Mandate_Y_N__c</fullName>
        <label>SP Mandate (Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_SP_Provider__c</fullName>
        <label>SP Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_STDetail__c</fullName>
        <label>ST Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOT_Score__c</fullName>
        <label>Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Specialist__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Specialist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_SubChannel__c</fullName>
        <description>To store the Sub Channel value</description>
        <label>SubChannel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Sub_Indication__c</fullName>
        <label>Sub-Indication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Treatment_Stage_s__c</fullName>
        <description>It is a subsection of Prior Authorization</description>
        <label>Treatment Stage(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Coverage Policy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverage Policies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>